[package]
name = "qx86"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
bitvec = "0.17.4"

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.2"

[[bench]]
name = "qx86_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false